# DMarked

./: .gitignore  .gitmodules  CMakeLists.txt  DMarked.pro  README.md  build_deb.sh  dmarked.desktop  dmarked.desktop.in  document.cpp  flake.nix  main.cpp  mainwindow.cpp  mainwindow.h  markdowneditor.pro
.github/ISSUE_TEMPLATE/: bug_report.md
.obs/: deepin_workflows.yml  workflows.yml
debian/: README.Debian  changelog  control  copyright  rules
dmarked/: CMakeLists.txt  application.cpp  application.h  dmarked.pro  main.cpp  mainwindow.cpp  mainwindow.h  settings.cpp  settings.h  translations.qrc
dmarked/translations/: dmarked.zh_CN.qm  dmarked.zh_CN.ts  dmarked_zh_CN.qm  dmarked_zh_CN.ts
dmarked/utils/: mappagesize.cpp  mappagesize.h  mdexport.cpp  mdexport.h  settingsdialog.cpp  utils.cpp  utils.h
dmarked/widgets/: bottombar.cpp  bottombar.h  centralwidget.cpp  centralwidget.h  ddropdownmenu.cpp  ddropdownmenu.h  editorwidget.cpp  editorwidget.h  topdfdlg.cpp  topdfdlg.h  topdfdlg.ui
dmarked/widgets/dropdown-menu/: ddropdownmenu.cpp  ddropdownmenu.h  mdtheme.cpp  mdtheme.h
dmarked/widgets/editor-widget/: editorwidget.cpp  editorwidget.h  fakevimproxy.cpp  fakevimproxy.h
dmarked/widgets/preview-widget/: document.cpp  document.h  previewpage.cpp  previewpage.h  previewwidget.cpp  previewwidget.h
nix/: default.nix  fakevim.nix
resources/: a.html  default.md  dmarked.js  index.html  markdowneditor.qrc  scrollbars.css  scrollbars_dark.css  scrollbars_light.css  settings.json
resources/3rdscripts/: mermaid.min.js  readme.md  require_config.js  twemoji.min.js  uslug.js
resources/3rdscripts/highlight/: nix.min.js
resources/3rdscripts/markdown-it/: markdown-it-container.css  markdown-it-container.scss  markdown-it-imsize.min.js  markdown-it-sub.min.js  markdown-it-sup.min.js  markdown-it-task-lists.js  markdown-it-xss.min.js
resources/3rdscripts/math/: katex.min.js  texmath.min.css  texmath.min.js
resources/themes/: apollo.css  byword-dark.css  darkdown.css  erye.css  infoq.css  less.css  list-writing.css  markdown.css  ocean.css  sanyuesha.css  simple.css  style.css  typing.css  wecatch-code.css  xiaolai.css
src/: CMakeLists.txt  application.cpp  application.h  main.cpp  mainwindow.cpp  mainwindow.h  settings.cpp  src.pro  translations.qrc
src/translations/: dmarked_zh_CN.ts
src/utils/: mappagesize.cpp  mappagesize.h  settingsdialog.cpp
src/widgets/: bottombar.cpp  bottombar.h  centralwidget.cpp  centralwidget.h  ddropdownmenu.cpp  ddropdownmenu.h  topdfdlg.cpp
src/widgets/dropdown-menu/: ddropdownmenu.cpp  ddropdownmenu.h  mdtheme.cpp
src/widgets/editor-widget/: editorwidget.h  fakevimproxy.cpp
src/widgets/preview-widget/: document.h  previewpage.h  previewwidget.cpp  previewwidget.h
